fix: cremoved main margin and used flexbox to align the qr card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,9 +36,10 @@ body {
 .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
-    margin: calc((100vh * 0.0921) * 2) 0px calc((100vh * 0.0927) * 2) 0px;
+    width: 100vw;
+    height: 100vh;
 }
 
 .qr-card-container {
